--- a/style.css
+++ b/style.css
@@ -1,164 +1,42 @@
-.body{
-    /* Encriptador - 1 Desktop */
- position: relative;
- width: 100%;
- height: 1090px;
-
-/* Light blue/light-blue-100 */
-background: #F3F5FC;
+body{
+    background: #F3F5FC;
+    position: absolute;
+}
+@media only screen and (min-width: 600px) {
+main{
+    margin: 2% 10%;
+    display: grid;
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+    grid-template-columns: repeat(2, 1fr);
+    width:min-content;
 }
 
 .logo{
-    position: absolute;
-    left: 5%;
-    right: 37.43%;
-    top: 5%;
-    bottom: 0%;
+    margin-left: 5%;
+    width: 2%;
+    height: 2%;
+    grid-column: 1 / 3;
+    grid-row: 1;
 }
 
-#textoDesencriptado{
-border: none;
-/* Ingrese el texto aqui */
-position: absolute;
-background: #F3F5FC;
-width: 577px;
-height: 400px;
-left: 240px;
-top: 168px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 150%;
-/* identical to box height, or 48px */
-/* Dark blue/dark-blue-300 */
-color: #0A3871;
-}
-
-.rectangle1{
-    /* Rectangle 1 */
-    position: absolute;
-    width: 400px;
-    height: 944px;
-    left: 940px;
-    top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    /* White */
-    background: #FFFFFF;
-    /* shadow */
-    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-    border-radius: 32px; 
-}
-
-.muñeco{
-    /* Muñeco */
-    position: absolute;
-    width: 336px;
-    height: 304px;
-    top: 283px;
-}
-
-.error{
-    /* Frame 5 */
-    /* Auto layout */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-
-    position: absolute;
-    width: 336px;
-    height: 122px;
-    top: 619px;
-}
-
-.mjeNoEncontrado{
-    /* Ningún mensaje fue encontrado */
-    position: static;
-    width: 336px;
-    height: 58px;
-    left: 0px;
-    top: 0px;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 120%;
-    /* or 29px */
-    text-align: center;
-
-    /* Gray/gray-500 */
-    color: #343A40;
-    /* Inside auto layout */
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-    margin: 16px 0px;
-}
-
-.txtDesencriptar{
-    /* Ingresa el texto que desees encriptar o desencriptar. */
-    position: static;
-    width: 336px;
-    height: 48px;
-    left: 0px;
-    top: 74px;
-
+.textodesencriptado{
+    grid-column: 1;
+    grid-row: 2 / 5;
+    /* Ingrese el texto aqui */
+    background: #F3F5FC;
+    width: 577px;
+    height: 400px;
+    margin: 0 100px 60% 0;
+    border: none;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 32px;
     line-height: 150%;
-    /* or 24px */
-    text-align: center;
-
-    /* Gray/gray-400 */
-    color: #495057;
-}
-
-.reseña{
-    /* Auto layout */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-
-    position: absolute;
-    width: 229px;
-    height: 18px;
-    left: 240px;
-    top: 851px;
-}
-
-.frame3{
-    /* Solo letras minúsculas y sin acentos */
-    position: static;
-    width: 205px;
-    height: 18px;
-    left: 24px;
-    top: 0px;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 150%;
-    /* identical to box height, or 18px */
-    /* Gray/gray-400 */
-    color: #495057
-    opacity: 0.8;
-
-    /* Inside auto layout */
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    margin: 0px 8px;
+    /* identical to box height, or 48px */
+    /* Dark blue/dark-blue-300 */
+    color: #0A3871;
 }
 
 .framebuttons{
@@ -171,8 +49,8 @@ color: #0A3871;
     position: absolute;
     width: 680px;
     height: 67px;
-    left: 240px;
-    top: 885px;
+    margin: 2%  0 0 0;
+ 
 }
 
 .button1{
@@ -240,15 +118,108 @@ color: #0A3871;
     margin: 0px 24px;
 }
 
+.textoencriptado{
+    grid-column: 3;
+    grid-row: 2 / 5;
+    width: 300px;
+    height: 944px;
+    padding: 10%;
+    display: flex;
+    justify-content: center;
+   
+    
+    /* White */
+    background: #FFFFFF;
+    /* shadow */
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px; 
+}
 
-.botoncopiar{
+.muñeco{
+    /* Muñeco */
+    position: absolute;
+    width: 336px;
+    height: 304px;
+    top: 283px;
+
+}
+
+.error{
+/* Frame 5 */
+    /* Auto layout */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    position: absolute;
+    width: 336px;
+    height: 122px;
+    top: 619px;
+}
+
+.mjeNoEncontrado{
+       /* Ningún mensaje fue encontrado */
+       position: static;
+       width: 336px;
+       height: 58px;
+       left: 0px;
+       top: 0px;
+   
+       font-family: 'Inter';
+       font-style: normal;
+       font-weight: 700;
+       font-size: 24px;
+       line-height: 120%;
+       /* or 29px */
+       text-align: center;
+   
+       /* Gray/gray-500 */
+       color: #343A40;
+       /* Inside auto layout */
+       flex: none;
+       order: 0;
+       align-self: stretch;
+       flex-grow: 0;
+       margin: 16px 0px;
+}
+
+.txtDesencriptar{
+    /* Ingresa el texto que desees encriptar o desencriptar. */
+    position: static;
+    width: 336px;
+    height: 48px;
+    left: 0px;
+    top: 74px;
 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
+    line-height: 150%;
+    /* or 24px */
+    text-align: center;
+
+    /* Gray/gray-400 */
+    color: #495057;
+}
+
+.reseña{
+    
+
+    position: absolute;
+    width: 500px;
+    height: 18px;
+    left: 10%;
+    top: 851px;
+}
+
+.botoncopiar{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
     line-height: 19px;
-    text-align:center;
 
     /* White */
     color: #FFFFFF;
@@ -257,7 +228,7 @@ color: #0A3871;
     width: 328px;
     height: 67px;
     top: 800px;
-    left: 980px;
+    left: 810px;
 
 
     /* Dark blue/dark-blue-300 */
@@ -265,28 +236,12 @@ color: #0A3871;
     border-radius: 24px;
 }
 
-
-footer{
-    background-color: #0A3871;
-    position: absolute;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/*Boton borrar*/
-.delete{
-
+.limpiar{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-    text-align:center;
 
     /* White */
     color: #FFFFFF;
@@ -294,12 +249,25 @@ footer{
     position: absolute;
     width: 328px;
     height: 67px;
-    top: 880px;
-    left: 1030px;
+    top: 900px;
+    left: 810px;
 
 
     /* Dark blue/dark-blue-300 */
     background: #0A3871;
     border-radius: 24px;
+
 }
 
+footer{
+    background-color: #0A3871;
+    bottom: 0;
+    height: 50px;
+    width: 135%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+}
